<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">
    <View
        android:id="@+id/lengkung_biru"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-90dp"
        android:background="@drawable/lengkung_biru"
        />
    <View
        android:id="@+id/vector_1"
        android:layout_width="128dp"
        android:layout_height="133dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-8dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-10dp"
        android:background="@drawable/vector1"
        />
    <View
        android:id="@+id/vector_2"
        android:layout_width="91.5dp"
        android:layout_height="86.49dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-6dp"
        android:background="@drawable/vector2"
        />

    <TextView
        android:id="@+id/farmnesia"
        android:fontFamily="@font/poppinsb"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="88dp"
        android:gravity="center_horizontal"
        android:text="@string/farmnesia"
        android:textColor="@color/white"
        android:textSize="40sp" />
    <View
        android:id="@+id/rectangle_2"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="135dp"
        android:background="@drawable/rectangle_2"
        android:elevation="4dp" />
    <TextView
        android:id="@+id/welcome"
        android:fontFamily="@font/poppinsbb"
        android:layout_width="116dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:text="@string/welcome"
        android:textAppearance="@style/welcome"
        android:gravity="top"
        android:elevation="4dp"/>
    <TextView
        android:id="@+id/aplication_"
        android:fontFamily="@font/poppinsr"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="195dp"
        android:text="@string/aplication_"
        android:textAppearance="@style/aplication_"
        android:gravity="top"
        android:elevation="4dp"/>
    <TextView
        android:id="@+id/menu"
        android:fontFamily="@font/poppinsbb"
        android:layout_width="69dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="299dp"
        android:text="@string/menu"
        android:textAppearance="@style/menu"
        android:gravity="top" />
    <View
        android:id="@+id/rectangle_7"
        android:layout_width="300dp"
        android:layout_height="185dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="342dp"
        android:background="@drawable/rectangle_7" />
    <TextView
        android:id="@+id/some_id"
        android:layout_width="22dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="172dp"
        android:layout_marginEnd="172dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="319dp"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id"
        android:gravity="center_horizontal" />
    <View
        android:id="@+id/rectangle_9"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="365dp"
        android:background="@drawable/rectangle_9"
        android:elevation="4dp" />
    <TextView
        android:id="@+id/cage_1"
        android:fontFamily="@font/poppinsbb"
        android:layout_width="90dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="66dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="369dp"
        android:text="@string/cage_1"
        android:textAppearance="@style/cage_1"
        android:gravity="center_horizontal"
        android:elevation="4dp"/>
    <View
        android:id="@+id/termometer_"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="367dp"
        android:background="@drawable/termometer_"
        android:elevation="4dp" />
    <TextView
        android:id="@+id/Ctemperature"
        android:fontFamily="@font/poppinsbb"
        android:layout_width="130dp"
        android:layout_height="96dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="424dp"
        android:text="@string/ctemp"
        android:textAppearance="@style/ctemp"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/O"
        android:layout_width="30dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="432dp"
        android:text="@string/O"
        android:textAppearance="@style/O"
        android:gravity="top" />
    <TextView
        android:id="@+id/c"
        android:fontFamily="@font/poppinsbb"
        android:layout_width="30dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="432dp"
        android:text="@string/c"
        android:textAppearance="@style/c"
        android:gravity="top" />
    <View
        android:id="@+id/rectangle_8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="406dp"
        android:background="@drawable/rectangle_8"
        android:elevation="4dp" />
    <View
        android:id="@+id/humidity_1"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="97dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="414dp"
        android:background="@drawable/humidity_1"
        android:elevation="4dp"/>
    <TextView
        android:id="@+id/humidity"
        android:fontFamily="@font/poppinsr"
        android:layout_width="55dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="83dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="441dp"
        android:text="@string/humidity"
        android:textAppearance="@style/humidity"
        android:gravity="center_horizontal"
        android:elevation="4dp"/>
    <TextView
        android:id="@+id/hmdt"
        android:fontFamily="@font/poppinsbb"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="453dp"
        android:text="@string/hmdt"
        android:textAppearance="@style/hmdt"
        android:gravity="center_horizontal"
        android:elevation="4dp"/>
    <TextView
        android:id="@+id/persen"
        android:fontFamily="@font/poppinsr"
        android:layout_width="16dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="136dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="466dp"
        android:text="@string/persen"
        android:textAppearance="@style/persen"
        android:gravity="center_horizontal"
        android:elevation="4dp"/>
    <View
        android:id="@+id/rectangle_jml"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="543dp"
        android:background="@drawable/rectangle_jml"/>
    <View
        android:id="@+id/ellipse_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="552dp"
        android:background="@drawable/blue_circle" />
    <View
        android:id="@+id/goat_1_2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="75dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="570dp"
        android:background="@drawable/goat" />
    <TextView
        android:id="@+id/amount"
        android:fontFamily="@font/poppinsbb"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="140dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="560dp"
        android:text="@string/amount"
        android:textAppearance="@style/amount"
        android:gravity="top" />
    <TextView
        android:id="@+id/cage_2"
        android:fontFamily="@font/poppinsbb"
        android:layout_width="120dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="193dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="589dp"
        android:text="@string/cage_1"
        android:textAppearance="@style/cage_1"
        android:gravity="top" />
    <TextView
        android:id="@+id/jumlah_domba"
        android:fontFamily="@font/poppinsbb"
        android:layout_width="100dp"
        android:layout_height="96dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="270dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="545dp"
        android:text="@string/jumlah_domba"
        android:textAppearance="@style/jumlah_domba"
        android:gravity="center_horizontal" />
    <View
        android:id="@+id/rectangle_ble"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="660dp"
        android:background="@drawable/rectangle_ble" />
    <View
        android:id="@+id/ellipse_2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="679dp"
        android:background="@drawable/lingkaran_abu"
        android:elevation="4dp" />
    <View
        android:id="@+id/wifi_connec"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="72dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="688dp"
        android:background="@drawable/ble"
        android:elevation="4dp"/>
    <TextView
        android:id="@+id/ble_connect"
        android:fontFamily="@font/poppinsbb"
        android:layout_width="164dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="140dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="682dp"
        android:text="@string/ble_connect"
        android:textAppearance="@style/ble_connect"
        android:gravity="top" />
    <TextView
        android:id="@+id/to_connecti"
        android:fontFamily="@font/poppinsr"
        android:layout_width="162dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="140dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="710dp"
        android:text="@string/to_connecti"
        android:textAppearance="@style/to_connecti"
        android:gravity="center_vertical" />
    <TextView
        android:id="@+id/the_farmnes"
        android:fontFamily="@font/poppinsr"
        android:layout_width="170dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="140dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="723dp"
        android:text="@string/the_farmnes"
        android:textAppearance="@style/the_farmnes"
        android:gravity="center_vertical" />
</RelativeLayout>