<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".DataInformation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/data_inform"
            android:fontFamily="@font/poppinsbb"
            android:layout_width="212dp"
            android:layout_height="33dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_horizontal"
            android:text="@string/data_inform"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/back_data"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/enter_1"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="true" />

        <View
            android:id="@+id/rectangle_1"
            android:layout_width="wrap_content"
            android:layout_height="805dp"
            android:layout_marginTop="88dp"
            android:background="@drawable/rectangle_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:id="@+id/ellipse_2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="260dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="150dp"
            android:background="@drawable/lingkaran_abu"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:id="@+id/wifi_connec"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="260dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="160dp"
            android:background="@drawable/ble"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/ble_name"
            android:fontFamily="@font/poppinsbb"
            android:layout_width="119dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="159dp"
            android:layout_marginEnd="30dp"
            android:elevation="5dp"
            android:gravity="top"
            android:text="@string/ble_name"
            android:textAppearance="@style/ble_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/connected"
            android:fontFamily="@font/poppinsr"
            android:layout_width="79dp"
            android:layout_height="21dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="183dp"
            android:layout_marginEnd="68dp"
            android:text="@string/connected"
            android:textAppearance="@style/connected"
            android:gravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/goat_data"
            android:fontFamily="@font/poppinsbb"
            android:layout_width="210dp"
            android:layout_height="33dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="150dp"
            android:gravity="top"
            android:text="@string/goat_data"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:id="@+id/ellipse_1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="37dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="292dp"
            android:background="@drawable/blue_circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <View
            android:id="@+id/goat_1_2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="57dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="312dp"
            android:background="@drawable/goat"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/domba_id"
            android:fontFamily="@font/poppinsbb"
            android:layout_width="119dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="305dp"
            android:layout_marginEnd="30dp"
            android:elevation="5dp"
            android:gravity="top"
            android:text="@string/ble_name"
            android:textAppearance="@style/ble_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/id_domba"
            android:fontFamily="@font/poppinsr"
            android:layout_width="79dp"
            android:layout_height="21dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="338dp"
            android:layout_marginEnd="68dp"
            android:text="@string/id_domba"
            android:textAppearance="@style/connected"
            android:gravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <View
            android:id="@+id/rectangle_weight"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="389dp"
            android:background="@drawable/rectengle_weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:id="@+id/timbangan"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="62dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="399dp"
            android:background="@drawable/baseline_scale_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="@font/poppinsbb"
            android:layout_height="wrap_content"
            android:text="@string/goat"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="22dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tanggal_domba"
            android:fontFamily="@font/poppinsr"
            android:layout_width="130dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="430dp"
            android:layout_marginEnd="22dp"
            android:text="@string/tanggal_domba"
            android:textAppearance="@style/connected"
            android:gravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/goatData1"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/poppinsbb"
            android:gravity="center_horizontal"
            android:text="@string/berat_domba"
            android:textAppearance="@style/berat_domba"
            android:layout_marginTop="405dp"
            android:layout_marginStart="210dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>


