<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ScanOcr">

    <TextView
        android:id="@+id/data_inform"
        android:fontFamily="@font/poppinsbb"
        android:layout_width="192dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/scan_weight"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/back_ocr"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/enter_1"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="wrap_content"
        android:layout_height="805dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/ellipse_2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="260dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/lingkaran_abu"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/wifi_connec"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="260dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:background="@drawable/ble"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/ble_name"
        android:fontFamily="@font/poppinsbb"
        android:layout_width="119dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="30dp"
        android:elevation="5dp"
        android:gravity="top"
        android:text="@string/ble_name"
        android:textAppearance="@style/ble_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/connected"
        android:fontFamily="@font/poppinsr"
        android:layout_width="79dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="183dp"
        android:layout_marginEnd="60dp"
        android:text="@string/connected"
        android:textAppearance="@style/connected"
        android:gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageV"
                    android:adjustViewBounds="true"
                    app:strokeWidth="2dp"
                    android:src="@drawable/baseline_image_24"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    android:textColor="@color/blue"
                    android:gravity="center"
                    android:fontFamily="@font/poppinsbb"
                    android:text="Scanned Text :"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/scannedT"
                    android:fontFamily="@font/poppinsbb"
                    android:textSize="12sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/inputimage"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppinsbb"
                        app:icon="@drawable/baseline_add_a_photo_24"
                        android:text="Take Image"/>
                    <Button
                        android:id="@+id/scanImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppinsbb"
                        app:icon="@drawable/baseline_document_scanner_24"
                        android:layout_marginStart="5dp"
                        android:text="Scan Text"/>
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>